--- a/app/views/ttd/index.html.erb
+++ b/app/views/ttd/index.html.erb
@@ -32,6 +32,6 @@
     </div>
 </div>
 <footer>
-<p> All copyright &copy reserved. Reeonce 2014 </p>
+<p>@copy Reeonce 2014. All copyright reserved.</p>
 <p><a href='/ttd/privacy_policy/'>Privacy Policy</a> | <a href='/ttd/tos/'>Terms of Service</a></p>
 </footer>
